--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 # Conexion con MySQL
 
+spring.datasource.driver=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/CT1_DAW
 
 spring.datasource.username=root
 
-spring.datasource.password=root
+spring.datasource.password=Diego123
 
 spring.jpa.hibernate.ddl-auto=update
 
